--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
 jiter==0.11.1
-openai==2.6.0
+ollama==0.4.7
 pydantic==2.12.3
 pydantic_core==2.41.4
 python-dotenv==1.1.1
@@ -23,7 +23,4 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
 uvicorn==0.38.0
-vercel==0.3.2
-vercel-sandbox==0.0.2
-vercel-sdk==0.0.8
-google-genai==1.3.0
+Pillow==11.0.0
